# Elelem

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SPECIFICATION.md  VERSIONING.md  all_models.txt  example_yaml_response.py  minimal_dashboard.py  pyproject.toml  simple_dashboard.py  telelem.py  test_batch.json
.github/workflows/: release.yml
recall/: recall.py
results/: deepinfra_deepseek-ai_DeepSeek-V3.1_medium.json  deepinfra_deepseek-ai_DeepSeek-V3.1_small.json  deepinfra_deepseek_deepseek-3.1?nothink_medium.json  deepinfra_deepseek_deepseek-3.1?nothink_small.json  deepinfra_openai_gpt-oss-120b_medium.json  deepinfra_openai_gpt-oss-120b_small.json  deepinfra_openai_gpt-oss-20b_medium.json  deepinfra_openai_gpt-oss-20b_small.json  fireworks_deepseek-3.1_medium.json  fireworks_deepseek-3.1_small.json  fireworks_deepseek_deepseek-3.1?nothink_medium.json  fireworks_deepseek_deepseek-3.1?nothink_small.json  fireworks_gpt-oss-120b_medium.json  fireworks_gpt-oss-120b_small.json  fireworks_gpt-oss-20b_medium.json  fireworks_gpt-oss-20b_small.json  fireworks_openai_gpt-oss-120b_medium.json  fireworks_openai_gpt-oss-120b_small.json  fireworks_openai_gpt-oss-20b_medium.json  fireworks_openai_gpt-oss-20b_small.json  groq_openai_gpt-oss-120b_medium.json  groq_openai_gpt-oss-120b_small.json  groq_openai_gpt-oss-20b_medium.json  groq_openai_gpt-oss-20b_small.json  parasail_deepseek-3.1_medium.json  parasail_deepseek-3.1_small.json  parasail_deepseek_deepseek-3.1?nothink_medium.json  parasail_deepseek_deepseek-3.1?nothink_small.json  parasail_gpt-oss-120b_medium.json  parasail_gpt-oss-120b_small.json  parasail_openai_gpt-oss-120b_medium.json  parasail_openai_gpt-oss-120b_small.json  scaleway_gpt-oss-120b_medium.json  scaleway_gpt-oss-120b_small.json  scaleway_openai_gpt-oss-120b_medium.json  scaleway_openai_gpt-oss-120b_small.json
scripts/: simple_test.py
src/elelem/: __init__.py  _benchmark_store.py  _cost_calculation.py  _exceptions.py  _json_fixer.py  _json_validation.py  _provider_management.py  _reasoning_tokens.py  _request_execution.py  _response_processing.py  _retry_logic.py  _token_providers.py  _yaml_validation.py  cache.py  config.json  config.py  core.py  elelem.py  metrics.py  models.py  models.yaml  providers.py  reasoning_tokens.py
src/elelem/dashboard/: Dockerfile  README.md  dashboard.py  requirements.txt  schema.py
src/elelem/providers/: _metadata.yaml  baseten.yaml  cerebras.yaml  cerebras@openrouter.yaml  cost@openrouter.yaml  deepinfra.yaml  deepseek.yaml  fireworks.yaml  free@openrouter.yaml  gmi.yaml  google.yaml  groq.yaml  mistral.yaml  novita.yaml  ollama.yaml  openai.yaml  openrouter.yaml  parasail.yaml  scaleway.yaml  throughput@openrouter.yaml  vertex.yaml  virtual-models.yaml
src/elelem/server/: Dockerfile  SERVER.md  __init__.py  docker-compose.yml  main.py  models.py  requirements-server.txt
tests/: conftest.py  docker-compose.yml  test_api_integration.py  test_benchmark_store.py  test_cache.py  test_config_validation.py  test_elelem.py  test_elelem_server_mode.py  test_elelem_with_faker.py  test_parameterized_models.py  test_providers.py  test_real_providers.py  test_request_tracker_lifecycle.py  test_yaml_integration.py  test_yaml_validation.py
tests/faker/: SCENARIOS.md  __init__.py  config.py  response_generator.py  scenarios.py  server.py  validator.py
tests/providers/: faker-streaming.yaml  faker.yaml  virtual-faker-models.yaml
tests/telelem/: analyze_token_structures.py  batch.json  batch_small.json  batchy.json  big_batch.json  cerebras@openrouter_meta-llama_llama-4-maverick-17b_small.json  cerebras@openrouter_meta-llama_llama-4-scout-17b_small.json  cerebras@openrouter_openai_gpt-oss-120b?high_small.json  cerebras@openrouter_openai_gpt-oss-120b?low_small.json  comprehensive_gemini-2.5-flash_reasoning_default.json  comprehensive_gemini-2.5-flash_reasoning_low.json  comprehensive_gemini-2.5-flash_reasoning_medium.json  comprehensive_gemini-2.5-flash_reasoning_none.json  comprehensive_gemini-2.5-pro_reasoning_default.json  comprehensive_gemini-2.5-pro_reasoning_high.json  comprehensive_gemini-2.5-pro_reasoning_low.json  comprehensive_gemini-2.5-pro_reasoning_medium.json  comprehensive_gemini-2.5-pro_reasoning_none.json  comprehensive_gemini-2.5-pro_thinking_config.json  daily.json  debug_gemini_response.json  debug_gemini_tokens.py  deepinfra.txt  deepinfra_openai_gpt-oss-120b?reasoning=low_small.json  deepinfra_openai_gpt-oss-20b?thinkhard_small.json  deepinfra_openai_gpt-oss-20b_small.json  fireworks_openai_gpt-oss-20b?reasoning=low_small.json  fixed_test.json  gemini_debug.json  gemini_low.txt  gemini_reasoning_summary.json  gemini_test.json  gemini_test_gemini-2.5-flash-lite_low_no_thoughts.json  gemini_test_gemini-2.5-flash-lite_low_with_thoughts.json  gemini_test_gemini-2.5-flash-lite_none_no_thoughts.json  gemini_test_gemini-2.5-flash-lite_none_with_thoughts.json  gemini_test_gemini-2.5-flash_low_no_thoughts.json  gemini_test_gemini-2.5-flash_low_with_thoughts.json  gemini_test_gemini-2.5-flash_none_no_thoughts.json  gemini_test_gemini-2.5-flash_none_with_thoughts.json  (+67 more)
tests/telelem/dir4/: batch_summary.csv  batch_summary.json  deepinfra_openai_gpt-oss-120b_small.json  deepinfra_openai_gpt-oss-20b_small.json  fireworks_openai_gpt-oss-120b_small.json  parasail_deepseek_deepseek-3.1?nothink_small.json
tests/telelem/dtest/: batch_summary.csv  batch_summary.json  deepinfra_openai_gpt-oss-120b_small.json  deepinfra_openai_gpt-oss-20b_small.json  fireworks_openai_gpt-oss-120b_small.json  parasail_deepseek_deepseek-3.1?nothink_small.json
tests/telelem/dtestpar/: batch_summary.csv  batch_summary.json  deepinfra_openai_gpt-oss-120b_small.json  deepinfra_openai_gpt-oss-20b_small.json  fireworks_openai_gpt-oss-120b_small.json  parasail_deepseek_deepseek-3.1?nothink_small.json
tests/telelem/new/: batch_summary.csv  batch_summary.json  (+4 more)
(+143 files in other folders)
